added filter input to html

--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
   <body>
     <body>
     <h1>PokéDom- gotta code 'em all!</h1>
+    <form class="input-form">
+      <label for="filter-pokemons" class="input-form__label">Filter Pokemons
+        <input type="text" id="filter-pokemons" class="input-form__input-field"/>
+        <span class="input-form__help">You can filter the pokemons by Id, Name or Type</span>
+      </label>
+    </d>
     <main class="card-container"></main>
     <script type="module" src="/src/main.ts"></script>
   </body>
