fixed typo in html

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
     <form class="input-form">
       <label for="filter-pokemons" class="input-form__label">Filter Pokemons
         <input type="text" id="filter-pokemons" class="input-form__input-field"/>
-        <span class="input-form__help">You can filter the pokemons by Id, Name or Type</span>
+        <span class="input-form__help">You can filter the Pokemons by Id, Name or Type</span>
       </label>
-    </d>
+    </form>
     <main class="card-container"></main>
     <script type="module" src="/src/main.ts"></script>
   </body>
